--- a/index.html
+++ b/index.html
@@ -15,11 +15,17 @@
 
     </head>
 
-    <body style="background-color:powderblue">
+    <body style="background-image: url(../firstFile/img/Phuc.jpg);background-size:50% 100%;
+                background-attachment: fixed;">
 
-        <h1 style="color:white;text-align:courier; border: 1px solid black; background-color:green"><b><i>Chúc mừng sinh nhật</i></b></h1>
-        <p style="text-align:center; font-size:200%;">1/12/2005</p>   
-    
+        <h1 style="color:antiquewhite;text-align:courier;text-align:center;font-size:300% ; border: 1px solid black; background-color:green"><b><i>Chúc mừng sinh nhật <small><em><ins>cô gái nhỏ</ins></em></small></i></b></h1>
+        <p style="font-size:200%;color:rgb(188, 255, 3)">Lời nói đầu tiên xin được chúc mừng sinh nhật Phúc, người con gái Hậu yêu.   
+        <br> Chúc Phúc luôn được hạnh phúc khi yêu Hậu và luôn vui vẻ bên Hậu nha. Ngày càng xinh đẹp học giỏi, luôn vui vẻ trong cuộc sống nà, thích j thì làm đó nà.
+        <br><br><br><br><br>
+        </p>
+        <hr>
+        <p style="text-align:center; color:beige;background-color: rgb(21, 59, 46); font-size:200%;">1/12/2005</p>   
+        <hr>
         <script src="scripts.js"></script>
         
     </body>
