--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     </head>
 
-    <body style="background-image: url(../firstFile/img/Phuc.jpg);background-size:50% 100%;
+    <body style="background-image: url(/img/Phuc.jpg);background-size:50% 100%;
                 background-attachment: fixed;">
 
         <h1 style="color:antiquewhite;text-align:courier;text-align:center;font-size:300% ; border: 1px solid black; background-color:green"><b><i>Chúc mừng sinh nhật <small><em><ins>cô gái nhỏ</ins></em></small></i></b></h1>
