--- a/index.html
+++ b/index.html
@@ -1,33 +1,84 @@
 <!doctype html>
-
-<html>
-    <head>
-      <meta charset="UTF-8">
-  <meta name="description" content="Free Web tutorials">
-  <meta name="keywords" content="HTML, CSS, JavaScript">
-  <meta name="author" content="John Doe">
+<html lang="vi">
+<head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Birthday</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: url('Phuc.jpg') no-repeat center center/cover;
+      color: #fff;
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.8);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
+    }
+    header {
+      background-color: rgba(0, 128, 0, 0.85);
+      padding: 15px 25px;
+      border-radius: 10px;
+      margin-top: 30px;
+      animation: fadeInDown 1s ease-in-out;
+    }
+    header h1 {
+      font-size: 2.5rem;
+      font-weight: bold;
+      font-style: italic;
+    }
+    main {
+      max-width: 800px;
+      background: rgba(0, 0, 0, 0.5);
+      padding: 20px;
+      border-radius: 15px;
+      margin: 20px;
+      animation: fadeIn 1.5s ease-in-out;
+    }
+    main p {
+      font-size: 1.3rem;
+      line-height: 1.6;
+      color: #fffd96;
+    }
+    footer {
+      background-color: rgba(21, 59, 46, 0.9);
+      padding: 10px 20px;
+      border-radius: 8px;
+      font-size: 1.5rem;
+      margin-bottom: 20px;
+      animation: fadeInUp 1s ease-in-out;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    @keyframes fadeInDown {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Chúc mừng sinh nhật <em><u>cô gái nhỏ</u></em></h1>
+  </header>
 
-        <title>Birthday</title>
+  <main>
+    <p>
+      Lời nói đầu tiên xin được chúc mừng sinh nhật Phúc, người con gái Hậu yêu.
+      Chúc Phúc luôn được hạnh phúc khi yêu Hậu và luôn vui vẻ bên Hậu nha.
+      Ngày càng xinh đẹp, học giỏi, luôn vui vẻ trong cuộc sống này,
+      thích gì thì làm đó nha.
+    </p>
+  </main>
 
-        <!-- Load external CSS styles -->
-        <link rel="stylesheet" href="styles.css">
-
-    </head>
-
-    <body style="background-image: url(/img/Phuc.jpg);background-size:50% 100%;
-                background-attachment: fixed;">
-
-        <h1 style="color:antiquewhite;text-align:courier;text-align:center;font-size:300% ; border: 1px solid black; background-color:green"><b><i>Chúc mừng sinh nhật <small><em><ins>cô gái nhỏ</ins></em></small></i></b></h1>
-        <p style="font-size:200%;color:rgb(188, 255, 3)">Lời nói đầu tiên xin được chúc mừng sinh nhật Phúc, người con gái Hậu yêu.   
-        <br> Chúc Phúc luôn được hạnh phúc khi yêu Hậu và luôn vui vẻ bên Hậu nha. Ngày càng xinh đẹp học giỏi, luôn vui vẻ trong cuộc sống nà, thích j thì làm đó nà.
-        <br><br><br><br><br>
-        </p>
-        <hr>
-        <p style="text-align:center; color:beige;background-color: rgb(21, 59, 46); font-size:200%;">1/12/2005</p>   
-        <hr>
-        <script src="scripts.js"></script>
-        
-    </body>
-
+  <footer>
+    1/12/2005
+  </footer>
+</body>
 </html>
