--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: url('Phuc.jpg') no-repeat center center/cover;
+      background: url('/img/Phuc.jpg') no-repeat center center/cover;
       color: #fff;
       text-shadow: 1px 1px 3px rgba(0,0,0,0.8);
       display: flex;
